--- a/src/styles/globals.scss
+++ b/src/styles/globals.scss
@@ -53,3 +53,32 @@ a {
     margin: 2em 0;
   }
 }
+
+.editor {
+  &-h1 {
+    font-size: 2.4em;
+    font-weight: bold;
+  }
+  &-h2 {
+    font-size: 2em;
+    font-weight: bold;
+  }
+  &-h3 {
+    font-size: 1.4em;
+    font-weight: bold;
+  }
+  &-ul {
+    padding-left: 20px;
+    position: relative;
+    &::before {
+      position: absolute;
+      background-color: #000;
+      border-radius: 50%;
+      width: 10px; height: 10px;
+    }
+  }
+  &-blockquote {
+    border: 1px solid #999;
+    padding: 10px;
+  }
+}
